--- a/shop.html
+++ b/shop.html
@@ -16,7 +16,7 @@
     
 
 <section id="header">
-<a href="#"><img src="/img/logo.png" class="logo" alt="Image currently not available"></a>
+<a href="#"><img src="./img/logo.png" class="logo" alt="Image currently not available"></a>
 
 <div>
     <ul id="navbar">
