Navigation Bar displayed on the remaining pages

--- a/sproduct.html
+++ b/sproduct.html
@@ -29,6 +29,11 @@
         <a href="#" id="close" > <i class="fas fa-times" style="color: #0e0d0d;"></i></a>
     </ul>
 </div>
+
+<div id="mobile">
+    <a href="cart.html"><i class="fas fa-shopping-bag" style="color: #0e0d0d;"></i></a>
+    <i id="bar" class="fas fa-outdent"></i>
+</div>
 </section>
 
 <section id="prodetails" class="section-p1">
