Newsletter form and button updated for phone users

--- a/index.html
+++ b/index.html
@@ -458,6 +458,11 @@
         <div class="form">
 <input type="text" placeholder="Your email address">
 <button>Sign Up</button>
+
+<div id="form1">
+<input type="text" placeholder="Your email address">
+<button>Sign Up</button>
+</div>
         </div>
     </section>
 
