--- a/shop.html
+++ b/shop.html
@@ -388,6 +388,12 @@
         <div class="form">
 <input type="text" placeholder="Your email address">
 <button>Sign Up</button>
+
+<div id="form1">
+    <input type="text" placeholder="Your email address">
+    <button>Sign Up</button>
+    </div>
+    
         </div>
     </section>
 
