--- a/sproduct.html
+++ b/sproduct.html
@@ -178,6 +178,13 @@
         <div class="form">
 <input type="text" placeholder="Your email address">
 <button>Sign Up</button>
+
+<div id="form1">
+<input type="text" placeholder="Your email address">
+<button>Sign Up</button>
+</div>
+        
+
         </div>
     </section>
 
