--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
         <li><a class="active" href="about.html">About</a></li>
-        <li><a href="contacts.html">Contact</a></li>
+        <!-- <li><a href="contacts.html">Contact</a></li> -->
         <li id="lg-bag"><a href="cart.html"><i class="fas fa-shopping-bag" style="color: #0e0d0d;"></i></a></li>
         
         <a href="#" id="close" > <i class="fas fa-times" style="color: #0e0d0d;"></i></a>
@@ -68,7 +68,7 @@
 </section>
 
 <section id="about-app" class="section-p1">
-    <h1>Download Our  App <a href="#">App</a></h1>
+    <h1>Download Our  <a href="#">App</a></h1>
     <div class="video">
         <video autoplay muted loop src="./img/about/1.mp4"></video>
     </div>
