--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="contacts.html">Contact</a></li>
+        <!-- <li><a href="contacts.html">Contact</a></li> -->
         <li id="lg-bag"><a href="cart.html"><i class="fas fa-shopping-bag" style="color: #0e0d0d;"></i></a></li>
         
         <a href="#" id="close" > <i class="fas fa-times" style="color: #0e0d0d;"></i></a>
