--- a/login.html
+++ b/login.html
@@ -90,7 +90,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: #45205e;
+  background-color: #331547;
   font-weight: 600;
 }
 
@@ -147,6 +147,55 @@ input[type="submit"]:hover {
 
 }
 
+@media screen and (max-width: 799px) {
+
+.login-container{
+    border-radius: 55px;
+    height: 70%;
+    width: 74%;}
+
+input::placeholder {
+font-size: 10px;
+}
+
+.login-icons{
+    margin-top: 30px;
+}
+
+#facebook{
+    padding: 12px 15px;
+    border: 1px solid #f8f7f7;
+    border-radius: 23px;
+    margin: 0 10px;
+    color: #ccc;
+    color: #0A2351;
+    background-color: white;
+}
+
+#google{
+    padding: 15px 15px;
+    border: 1px solid #f8f7f7;
+    border-radius: 23px;
+    margin: 0 10px;
+    background-image: linear-gradient(to right, #FF0000, #FFD500, #00A84C, #4285F4);
+    color: #7a0808;
+}
+
+#twitter{
+    padding: 13px 12px;
+    border-radius: 23px;
+    margin: 0 10px;
+    border: 1px solid #f8f7f7;
+    color: #1DA1F2;
+    background-color: white;
+}
+.text span{
+  display: flex;
+  justify-content: center;
+  font-size: 13px;
+  color: white;
+}
+}
 </style>
 </head>
 <body>
