--- a/index.html
+++ b/index.html
@@ -63,13 +63,17 @@ input[type="password"] {
 font-size:16px ;
 margin-top: 50px;
 
+}
 
+input::placeholder {
+font-size: 14px;
+color: #fffdfe;
 }
 
 #username:hover,
 #password:hover{
 color: rgb(255, 255, 255);
-font-weight: 650;
+font-weight: 700;
 }
 
 .text span{
@@ -77,6 +81,7 @@ font-weight: 650;
   justify-content: right;
   margin-top: 30px;
   margin-bottom: 30px;
+  font-size: 13px;
 }
 
 input[type="submit"] {
@@ -158,8 +163,9 @@ input::placeholder {
 font-size: 10px;
 }
 
-.login-icons{
-    margin-top: 30px;
+#login-icons{
+    /* margin-top: 20px; */
+    margin-bottom: 20px;
 }
 
 #facebook{
@@ -221,7 +227,7 @@ font-size: 10px;
 
     </div>
 
-      <div class="login-icons">
+      <div id="login-icons">
         <i id="facebook" class="fab fa-facebook-f"></i>
         <i id="google" class="fab fa-google"></i>
         <i id="twitter" class="fab fa-twitter"></i>
