--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@ input[type="submit"]:hover {
 
 @media screen and (max-width: 799px) {
 
+  body{
+    background-image: url(./img/login/log2.jpg);
+  }
+
 .login-container{
     border-radius: 55px;
     height: 70%;
