--- a/index.html
+++ b/index.html
@@ -152,11 +152,16 @@ input[type="submit"]:hover {
 
 @media screen and (max-width: 799px) {
 
+body{
+  background-size: cover;
+    background-position-x: center;
+}
 
 .login-container{
     border-radius: 55px;
     height: 70%;
     box-shadow: -3px 3px 5px gray;
+    
     width: 74%;}
   
 input::placeholder {
