--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
 <div>
     <ul id="navbar">
-        <li><a href="dailycart.html">Home</a></li>
+        <li><a href="myntra.html">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
         <li><a class="active" href="about.html">About</a></li>
         <!-- <li><a href="contacts.html">Contact</a></li> -->
