--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ font-size: 10px;
     border: 1px solid #f8f7f7;
     border-radius: 23px;
     margin: 0 10px;
-    background-image: linear-gradient(to right, #FF0000, #FFD500, #00A84C, #4285F4);
+    background-image: linear-gradient(135deg, #FF0000, #FFD500, #00A84C, #4285F4);
     color: #7a0808;
 }
 
