Cart page added

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
     <img src="./img/about/a6.jpg" alt="">
 
     <div>
-        <h2>Who WE Are?</h2>
+        <h3>Who We Are?</h3>
         <p>Welcome to Daily Cart - Your Ultimate Shopping Destination!
 
             At Daily Cart, we are passionate about bringing you the best shopping experience online. Our mission is to provide a wide range of high-quality products at unbeatable prices, all in one convenient place.
@@ -68,7 +68,7 @@
 </section>
 
 <section id="about-app" class="section-p1">
-    <h1>Download Our  <a href="#">App</a></h1>
+    <h2>Download Our  <a href="#">App</a></h2>
     <div class="video">
         <video autoplay muted loop src="./img/about/1.mp4"></video>
     </div>
