--- a/cart.html
+++ b/cart.html
@@ -36,7 +36,7 @@
 </div>
 </section>
 
-    <section id="page-header">
+    <section id="page-header" class="cartimage">
         
         <h2><i>#</i>Your<span>C</span>art</h2>
        
