input text color changed

--- a/index.html
+++ b/index.html
@@ -36,11 +36,6 @@
   transition: .3s ease;
 }
 
-.login-container:hover{
-  box-shadow: -3px 3px 5px gray;
-
-}
-
 h2 {
     margin: 30px 30px;
     color: #f0308a;
@@ -55,7 +50,8 @@ input[type="password"] {
   outline: none;
   border-radius: 0; 
   background-color: transparent; 
-  color: #e0e414; 
+  color: #a1055b; 
+  font-weight: 550;
   border-bottom: 1px solid #f8f7f7; 
   width: 50%; 
   margin-left: 10%; 
@@ -160,7 +156,7 @@ body{
 .login-container{
     border-radius: 55px;
     height: 70%;
-    box-shadow: -3px 3px 5px gray;
+    /* box-shadow: -3px 3px 5px gray; */
     
     width: 74%;}
   
