--- a/cart.html
+++ b/cart.html
@@ -20,9 +20,11 @@
 
 <div>
     <ul id="navbar">
-        <li><a href="myntra.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li id="logout" style="display: none;"><a href="/logout">Logout</a></li>
         <!-- <li><a href="contacts.html">Contact</a></li> -->
         <li id="lg-bag"><a class="active" href="cart.html"><i class="fas fa-shopping-bag" style="color: #0e0d0d;"></i></a></li>
       
