--- a/shop.html
+++ b/shop.html
@@ -20,13 +20,14 @@
 
 <div>
     <ul id="navbar">
-        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
         <li><a class="active" href="shop.html">Shop</a></li>
         <li><a href="about.html">About</a></li>
-        <li id="logout" style="display: none;"><a href="/logout">Logout</a></li>
-        <!-- <li><a href="contacts.html">Contact</a></li> -->
-        <li id="lg-bag"><a href="cart.html"><i class="fas fa-shopping-bag" style="color: #0e0d0d;"></i></a></li>
-        <li><a href="login.html">Login</a></li>
+           <!-- <li><a href="contacts.html">Contact</a></li> -->
+        <li id="lg-bag"><a href="cart.html" id="cart"><i class="fas fa-shopping-bag" style="color: #0e0d0d;"></i></a></li>
+
+        <li id="loginTab"><a href="login.html" id="login">Login</a></li>
+        <li id="logoutTab"><a href="#" id="logout">Logout</a></li>
         
         <a href="#" id="close" > <i class="fas fa-times" style="color: #0e0d0d;"></i></a>
     </ul>
