--- a/cart.html
+++ b/cart.html
@@ -20,11 +20,11 @@
 
 <div>
     <ul id="navbar">
-        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
-        <li><a class="active"  href="about.html">About</a></li>
+        <li><a href="about.html">About</a></li>
            <!-- <li><a href="contacts.html">Contact</a></li> -->
-        <li id="lg-bag"><a href="cart.html" id="cart"><i class="fas fa-shopping-bag" style="color: #0e0d0d;"></i></a></li>
+        <li id="lg-bag"><a class="active" href="cart.html" id="cart"><i class="fas fa-shopping-bag" style="color: #0e0d0d;"></i></a></li>
 
         <li id="loginTab"><a href="login.html" id="login">Login</a></li>
         <li id="logoutTab"><a href="#" id="logout">Logout</a></li>
