--- a/cart.html
+++ b/cart.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
 
 
-    <link rel="stylesheet" href="myntra.css">
+    <link rel="stylesheet" href="dailycart.css">
 
 </head>
 <body>
@@ -20,15 +20,11 @@
 
 <div>
     <ul id="navbar">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
         <li><a href="about.html">About</a></li>
-           <!-- <li><a href="contacts.html">Contact</a></li> -->
-        <li id="lg-bag"><a class="active" href="cart.html" id="cart"><i class="fas fa-shopping-bag" style="color: #0e0d0d;"></i></a></li>
-
-        <li id="loginTab"><a href="login.html" id="login">Login</a></li>
-        <li id="logoutTab"><a href="#" id="logout">Logout</a></li>
-      
+        <li id="lg-bag"><a class="active" href="cart.html"><i class="fas fa-shopping-bag" style="color: #0e0d0d;"></i></a></li>
+        
         <a href="#" id="close" > <i class="fas fa-times" style="color: #0e0d0d;"></i></a>
     </ul>
 </div>
@@ -201,6 +197,6 @@
 </footer>
 
 
-    <script src="myntra.js"></script>
+    <script src="dailycart.js"></script>
 </body>
 </html>
