--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
 
 
-    <link rel="stylesheet" href="myntra.css">
+    <link rel="stylesheet" href="dailycart.css">
 <style>
     body {
   display: flex;
