--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
         <li><a href="home.html">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
         <li><a class="active" href="about.html">About</a></li>
+        <li><a href="index.html">Logout</a></li>
         <li id="lg-bag"><a href="cart.html"><i class="fas fa-shopping-bag" style="color: #0e0d0d;"></i></a></li>
         
         <a href="#" id="close" > <i class="fas fa-times" style="color: #0e0d0d;"></i></a>
