--- a/home.html
+++ b/home.html
@@ -16,15 +16,15 @@
     
 
 <section id="header">
-<a href="#"><img src="./img/logo.png" class="logo" alt="Image currently not available"></a>
+<a href="#"><img src="./img/logo.png" id="logo" alt="Image currently not available"></a>
 
 <div>
     <ul id="navbar">
         <li><a class="active" href="home.html">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="index.html">Logout</a></li>
         <li id="lg-bag"><a href="cart.html"><i class="fas fa-shopping-bag" style="color: #0e0d0d;"></i></a></li>
-        
         <a href="#" id="close" > <i class="fas fa-times" style="color: #0e0d0d;"></i></a>
     </ul>
 </div>
