--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   border-radius: 5px;
   text-align: center;
   border-radius: 20px;
-  height: 90%;
+  height: 97%;
   width: 30%;
   transition: .3s ease;
 }
@@ -58,6 +58,11 @@ input[type="password"] {
 
 }
 
+#paralog{
+  color: #ccc;
+  font-size: 13px;
+  font-weight: 600;
+}
 /* #username ::placeholder */
 
 #username,
@@ -84,6 +89,7 @@ font-weight: 700;
   margin-top: 30px;
   margin-bottom: 30px;
   font-size: 14px;
+  /* color: white; */
 }
 
 input[type="submit"] {
@@ -107,6 +113,9 @@ input[type="submit"]:hover {
     font-weight: 600;
 }
 
+p{
+  color: black;
+}
 /* icons */
 
 .login-icons{
@@ -224,7 +233,9 @@ font-size: 10px;
 
       <div class="text">
       <span>Forgot your password?</span>
-      <p>Or sign up using</p>
+      <!-- <p>username:- demo@name <br> password:- 123456</p> -->
+      <p id="paralog">username:- demo@name <br> password:- 123456 </p>
+        <p>Or sign up using</p>
 
     </div>
 
