screen resolution for phone

--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@ p{
 body{
   background-size: cover;
     background-position-x: center;
+    height: 90%;
+    margin-top: 40px;
 }
 
 .login-container{
